--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 </head>
   <body>
     <header>
-
+        <h1>Reciclaje UGMA</h1>
     </header>
 
     <section>
-        <div>
-        <h2>unete a nuestra campaña de reciclaje</h2>
-        <p>En nuestra campaña creemos en el poder de las pequeñas acciones para lograr grandes resultados. Cada botella, lata o papel que se recicla cuenta, y juntos podemos marcar la diferencia                
-        </p>
-        <p>Estas listo para ser parte del cambio? Unete a nuestra camapaña y haz tu aporte para un futuro en nuestra universidad mas sostenible                
-        </p>
-        </div>
-        <aside class="imagen1">
-            <img src="imagenes/logo1.png"/>
-        </aside>
+        <div class="bloque">
+            <h2>unete a nuestra campaña de reciclaje</h2>
+            <p>En nuestra campaña creemos en el poder de las pequeñas acciones para lograr grandes resultados. Cada botella, lata o papel que se recicla cuenta, y juntos podemos marcar la diferencia                
+            </p>
+            <p>Estas listo para ser parte del cambio? Unete a nuestra camapaña y haz tu aporte para un futuro en nuestra universidad mas sostenible                
+            </p>
+            <img class="imagen1" src="imagenes/logo1.png"/>
+            </div>
+        
+            
     </section>
 
     <section class="seccion2">
-        <div class="bloque2">
+        <div class="bloque">
             <h2>quienes somos?</h2>
             <p>Somos un grupo de estudiantes de la Universidad Noriental Privada "Gran Mariscal de Ayacucho" y queremos invitarte a participar en nuestro proyecto de reciclaje               
             </p>
@@ -38,7 +38,7 @@
     </section>
 
     <section class="seccion3">
-        <div class="bloque3">
+        <div class="bloque">
             <h2>como puedes participar en nuestra campaña?</h2>
             <ul class="lista2">
                 <li class="vineta">Seguirnos en nuestro instagram para conocer mas de nuestra campaña</li>
