--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h2>unete a nuestra campaña de reciclaje</h2>
             <p>En nuestra campaña creemos en el poder de las pequeñas acciones para lograr grandes resultados. Cada botella, lata o papel que se recicla cuenta, y juntos podemos marcar la diferencia                
             </p>
-            <p>Estas listo para ser parte del cambio? Unete a nuestra camapaña y haz tu aporte para un futuro en nuestra universidad mas sostenible                
+            <p>¿Estás listo para ser parte del cambio? Unete a nuestra campaña y haz tu aporte para un futuro en nuestra universidad más sostenible                
             </p>
             <img class="imagen1" src="imagenes/logo1.png"/>
             </div>
@@ -28,10 +28,10 @@
 
     <section class="seccion2">
         <div class="bloque">
-            <h2>quienes somos?</h2>
+            <h2>¿Quiénes somos?</h2>
             <p>Somos un grupo de estudiantes de la Universidad Noriental Privada "Gran Mariscal de Ayacucho" y queremos invitarte a participar en nuestro proyecto de reciclaje               
             </p>
-            <p>Nuestro objetivo es implementar una campaña en nuestra univerisdad para concientizar y reducir el impacto ambiental de los que generamos
+            <p>Nuestro objetivo es implementar una campaña en nuestra universidad para concientizar y reducir el impacto ambiental de lo que generamos
             </p>
             <img class="imagen2" src="imagenes/imagengrupo.jpeg"/>
         </div>
@@ -39,12 +39,12 @@
 
     <section class="seccion3">
         <div class="bloque">
-            <h2>como puedes participar en nuestra campaña?</h2>
+            <h2>¿Cómo puedes participar en nuestra campaña?</h2>
             <ul class="lista2">
-                <li class="vineta">Seguirnos en nuestro instagram para conocer mas de nuestra campaña</li>
-                <li class="vineta">Separar los residuos segun su tipo: papel, plastico o vidrio</li>
-                <li class="vineta">Depositarlos en los puntos con contenedores que se habilitaran en la universidad</li>
-                <li class="vineta">Participar en las actividades educativas y ludicas que se organizaran en pro de promover esta campaña</li>
+                <li class="vineta">Seguirnos en nuestro cuenta de Instagram para conocer más de nuestra campaña</li>
+                <li class="vineta">Separar los residuos segun su tipo: papel, plástico o vidrio</li>
+                <li class="vineta">Depositarlos en los puntos con contenedores que se habilitarán en la universidad</li>
+                <li class="vineta">Participar en las actividades educativas y lúdicas que se organizarán en pro de promover esta campaña</li>
             </ul>
         </div>
     </section>
