--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
         </div>
     </section>
 
+    <section>
+        <div class="slides">
+		    <div> <img class="info" src="imagenes/1.jpeg"/> </div>
+		    <div> <img class="info" src="imagenes/2.jpeg"/> </div>
+		    <div> <img class="info" src="imagenes/3.jpeg"/> </div>
+	    </div>
+    </section>
+
     <section class="seccion3">
         <div class="bloque">
             <h2>¿Cómo puedes participar en nuestra campaña?</h2>
@@ -48,5 +56,9 @@
             </ul>
         </div>
     </section>
+
+    <footer>
+       
+    </footer>
   </body>
 </html>
