--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="bloque">
             <h2>¿Cómo puedes participar en nuestra campaña?</h2>
             <ul class="lista2">
-                <li class="vineta">Seguirnos en nuestro cuenta de Instagram para conocer más de nuestra campaña</li>
+                <li class="vineta">Seguirnos en nuestro cuenta de <a href="https://www.instagram.com/reciclaje.ugma?igsh=ZmsyMjNnOTNxZGl2">Instagram</a> para conocer más de nuestra campaña</li>
                 <li class="vineta">Separar los residuos segun su tipo: papel, plástico o vidrio</li>
                 <li class="vineta">Depositarlos en los puntos con contenedores que se habilitarán en la universidad</li>
                 <li class="vineta">Participar en las actividades educativas y lúdicas que se organizarán en pro de promover esta campaña</li>
